--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,35 @@ body{
     background-color: #BAD7E9;
 }
 
+#head{
+    background-color: #BAD7E9;
+    border-radius: 25px;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 1rem;
+    
+    font-family:'Courier New', Courier, monospace;
+    font-size: 10px;
+    font-weight: 700;
+    color: #2B3467;
+    text-align: center;
+}
+
+ul{
+    list-style: none;
+}
+
+.heading{
+    font-family:'Courier New', Courier, monospace;
+    font-size: 30px;
+    font-weight: 700;
+    color: #2B3467;
+    text-align: center;
+
+}
+
 #container{
     background-color: #2B3467;
     border-radius: 10px;
@@ -10,24 +39,25 @@ body{
     margin-left: 10%;
     margin-right: 10%;
     padding: 1rem 1rem 1rem 1rem;
-
+    border: #EB455F solid 3px;
 }
-
 
 .floor{
     display: flex
 }
 
 .liftDuct{
-    flex: 9;
+    display: inline-flex;
+    flex: 9.6;
     height: 6rem;
     background-color: #FCFFE7;
     margin: .25rem 0 .25rem 0;
     border-radius: 10px;
+    overflow:hidden;
 }
 
 .buttonPalette{
-    flex: 1;
+    width: 4rem;
     height: 6rem;
     background-color: #2B3467;
     margin: .25rem .5rem .25rem 0;
@@ -48,17 +78,16 @@ body{
     background-color: #EB455F;
     transition: .2s;
 }
-
+/* 
 .up:hover{
-    /* border-radius: 10px 10px 0px 0px ; */
 }
 
 .down:hover{
-    /* border-radius: 0px 0px 10px 10px ; */
-}
+} */
 
 .floorId{
 
+    flex: 0.1;
     font-size: 15px;
     font-weight: 700;
     color: #FCFFE7;
@@ -68,4 +97,36 @@ body{
     height: 20px;
     border-radius: 10px;
     background-color: #EB455F;
+    margin-top: 2.3rem;
+    margin-left: -0.5rem;
+}
+
+.lift{
+    display: flex;
+    height: 5.4rem;
+    width: 4rem;
+    border-radius: 5px;
+    background-color: #BAD7E9;
+    margin: .3rem .3rem .3rem .3rem;
+    overflow: hidden;
+    justify-content: space-between;
+    
+}
+
+.lift-door-left{
+    background-color: #2B3467;
+    height: 5.4rem;
+    width: 1.98rem;
+    transition: 2s;
+}
+
+.lift-door-right{
+    background-color: #2B3467;
+    height: 5.4rem;
+    width: 1.98rem;
+    
+}
+
+.lift:hover .lift-door-left{   /* to test the hover effect */
+    margin-right: 4.2rem;   
 }
