fixed a very small bug in design

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -92,7 +92,7 @@ ul{
     font-weight: 700;
     color: #FCFFE7;
     text-align: center;
-    position: fixed;
+    position: absolute;
     width: 20px;
     height: 20px;
     border-radius: 10px;
