--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,9 +35,11 @@ body{
     width: 350px;
     height: auto;
 
-    margin-left: 39%;
-    margin-right: 32%;
-    margin-top: 10%;
+    margin-left: 38%;
+    margin-right: 38%;
+
+    transition: ease all .5s;
+   
 }
 
 ul{
@@ -157,6 +159,10 @@ input{
     margin: .25rem .5rem .25rem 0;
     border-radius: 10px;
     overflow: hidden;
+
+    transition: ease all .5s;
+
+    
 }
 
 .btn{
@@ -165,7 +171,7 @@ input{
     width: 100%;
     height: 50%;
     position:static;
-    border: none;
+    
 }
 
 .btn:hover{
@@ -217,3 +223,20 @@ input{
     transition: 2.5s;
 }
 
+@media only screen and (max-width: 768px) {
+
+    #prompt-box{
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+
+    .buttonPalette{
+        width: 3rem;
+        margin: .25rem .5rem .25rem 0;
+    }
+
+    .lift{
+        width: 3rem;
+    }
+
+} 
